--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>onMouseDown y onMouseUp</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="contenedor"></div>
+    <script src="index.js"></script>
+</body>
+</html>
